meaningful commit week 2

--- a/mace_dana_project1/additem.html
+++ b/mace_dana_project1/additem.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
 <!-- Dana Mace
-VFW Term 1301
-Project 1
-January 10, 2013
+Mobile Interfaces and Usability
+Mobile Development
+Activity 1 1302
 Add Item HTML Page -->
 
 <html>
