--- a/mace_dana_project3/gold/index.html
+++ b/mace_dana_project3/gold/index.html
@@ -365,12 +365,12 @@
 	    <div data-role="content" data-theme="b">
 		<ul data-role="listview" data-filter="true" data-divider-theme="a" data-filter-placeholder="FIND GRATITUDES" data-inset="false">
 		    <li data-role="list-divider" class="browseListDivider">WHAT COLOR DO YOU LIKE BEST TODAY?:</li>
-		    <li data-theme="d"><a><img src="img/Yellow.png" alt="Yellow Heart Icon">YELLOW</a></li>
-		    <li data-theme="d"><a><img src="img/Pink.png" alt="Pink Heart Icon">PINK</a></li>
-		    <li data-theme="d"><a><img src="img/Blue.png" alt="Blue Heart Icon">BLUE</a></li>
-		    <li data-theme="d"><a><img src="img/Green.png" alt="Green Heart Icon">GREEN</a></li>
-		    <li data-theme="d"><a><img src="img/Red.png" alt="Red Heart Icon">RED</a></li>
-		    <li data-theme="d"><a><img src="img/Orange.png" alt="Orange Heart Icon">ORANGE</a></li>
+		    <li data-theme="d"><a href="404.html"><img src="img/Yellow.png" alt="Yellow Heart Icon">YELLOW</a></li>
+		    <li data-theme="d"><a href="404.html"><img src="img/Pink.png" alt="Pink Heart Icon">PINK</a></li>
+		    <li data-theme="d"><a href="404.html"><img src="img/Blue.png" alt="Blue Heart Icon">BLUE</a></li>
+		    <li data-theme="d"><a href="404.html"><img src="img/Green.png" alt="Green Heart Icon">GREEN</a></li>
+		    <li data-theme="d"><a href="404.html"><img src="img/Red.png" alt="Red Heart Icon">RED</a></li>
+		    <li data-theme="d"><a href="404.html"><img src="img/Orange.png" alt="Orange Heart Icon">ORANGE</a></li>
 		</ul>
 	    </div>
 	
@@ -395,12 +395,12 @@
 	    <div data-role="content" data-theme="b">
 		<ul data-role="listview" data-filter="true" data-divider-theme="a" data-filter-placeholder="FIND GRATITUDES" data-inset="false">
 		    <li data-role="list-divider" class="browseListDivider">Browse by ITEMS:</li>
-		    <li data-theme="d"><a><img src="images/items_flowers.png" alt="flower art">FLOWERS</a></li>
-		    <li data-theme="d"><a><img src="images/items_sunshine.png" alt="sunshine art">SUNSHINE</a></li>
-		    <li data-theme="d"><a><img src="images/items_stars.png" alt="stars art">STARS</a></li>
-		    <li data-theme="d"><a><img src="images/items_moon.png" alt="moon art">MOON</a></li>
-		    <li data-theme="d"><a><img src="images/items_grass.png" alt="grass art">GRASS</a></li>
-		    <li data-theme="d"><a><img src="images/items_birds.png" alt="birds art">BIRDS</a></li>
+		    <li data-theme="a"><a href="404.html"><img src="images/flowers.png" alt="flower art">FLOWERS</a></li>
+		    <li data-theme="a"><a href="404.html"><img src="images/sunshine.png" alt="sunshine art">SUNSHINE</a></li>
+		    <li data-theme="a"><a href="404.html"><img src="images/stars.png" alt="stars art">STARS</a></li>
+		    <li data-theme="a"><a href="404.html"><img src="images/moon.png" alt="moon art">MOON</a></li>
+		    <li data-theme="a"><a href="404.html"><img src="images/grass.png" alt="grass art">GRASS</a></li>
+		    <li data-theme="a"><a href="404.html"><img src="images/birds.png" alt="birds art">BIRDS</a></li>
 		</ul>
 	    </div>
 	
@@ -425,8 +425,8 @@
 	    <div data-role="content" data-theme="a" id="ratingpart">
 		<ul data-role="listview" data-filter="true" data-divider-theme="a" data-filter-placeholder="Search Ratings" data-inset="false">
 		    <li data-role="list-divider" class="browseListDivider">Browse by Gratitude Ratings:</li>
-		    <li><a><img src="images/10to6.png" alt="top ratings" id="topRatings">HIGHEST RATED<br><br><p>10 TO 6</p></a></li>
-		    <li><a><img src="images/5to0.png" alt="lowest ratings" id="lowestRatings">LOWEST RATED<br><br><p>5 TO 0</p></a></li>
+		    <li><a href="404.html"><img src="images/10to6.png" alt="top ratings" id="topRatings">HIGHEST RATED<br><br><p>10 TO 6</p></a></li>
+		    <li><a href="404.html"><img src="images/5to0.png" alt="lowest ratings" id="lowestRatings">LOWEST RATED<br><br><p>5 TO 0</p></a></li>
 		</ul>
 	    </div>
 	
