--- a/mace_dana_project4/bronze/index.html
+++ b/mace_dana_project4/bronze/index.html
@@ -28,7 +28,8 @@
 	
 	<!-- StyleSheets under here -->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
-	<link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/themes/grat3.css" />
+        <link rel="stylesheet" href="css/style.css" />
 	
 	<!-- JavaScript is normally at the end of the body, except for Modernizr which enables HTML5 elements & feature detects -->
 	<script src="js/libs/modernizr.custom.min.js"></script>
